<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Lokacije_Glavna_Activity"
    tools:showIn="@layout/activity_lokacije__glavna_">
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/latituda"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#8e7e7e"
        android:gravity="center_vertical|center_horizontal" />
    <TextView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:id="@+id/lattextView"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/longituda"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textColor="#8e7e7e"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:id="@+id/lontextView"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
    <TextView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:text="@string/visina"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="#8e7e7e"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:id="@+id/visinatextView"
        android:textSize="15sp"
        android:textColor="#000000"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_locijraj"
        android:src="@android:drawable/ic_menu_compass"
        android:onClick="klikLociraj"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_stani"
        android:src="@android:drawable/ic_media_pause"
        android:onClick="klikStani"
        android:layout_below="@+id/textView4"
        android:layout_toEndOf="@+id/gumb_snjimaj"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_prikazi_trenutno"
        android:src="@android:drawable/ic_media_play"
        android:onClick="klikPokazi_RUTU"
        android:layout_alignTop="@+id/gumb_stani"
        android:layout_toEndOf="@+id/gumb_stani"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_snjimaj"
        android:src="@android:drawable/presence_invisible"
        android:onClick="klikSnimaj"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_pokazi_spr_snjimano"
        android:src="@android:drawable/ic_menu_share"
        android:onClick="klikPokazSveSnimano"
        android:layout_alignTop="@+id/gumb_pokazi_spr"
        android:layout_alignEnd="@+id/visinatextView"
        android:nestedScrollingEnabled="true"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_spremi_snjimano"
        android:src="@android:drawable/ic_menu_save"
        android:onClick="klikSpremiSnimano1"
        android:layout_below="@+id/visinatextView"
        android:layout_toStartOf="@+id/gumb_pokazi_spr_snjimano"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_lociraj_spremi"
        android:src="@android:drawable/ic_menu_add"
        android:onClick="klikLocirajSpremi"
        android:layout_above="@+id/gumb_pokazi_spr"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:text="@string/new_button"
        android:id="@+id/gumb_pokazi_spr"
        android:src="@android:drawable/ic_menu_mapmode"
        android:onClick="klikLocirajPokaziSpr"
        android:layout_above="@+id/map1"
        android:layout_alignStart="@+id/gumb_lociraj_spremi"
        android:contentDescription="@string/todo" />
    <fragment
        android:id="@+id/map1"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="100dp"
        android:layout_height="415dp"
        android:layout_below="@+id/gumb_prikazi_trenutno"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        tools:layout="@layout/activity_lokacije__glavna_" />
</RelativeLayout>